# ai-tooling

./: LICENSE.txt  README.md  pyproject.toml
.codex/skills/update-readme-subpackages/: SKILL.md
.codex/skills/update-readme-subpackages/agents/: openai.yaml
.codex/skills/update-readme-subpackages/references/: checklist.md
.codex/skills/update-readme-subpackages/scripts/: discover_subpackages.py
.github/workflows/: publish.yml
ai_tooling/: __init__.py  utils.py
ai_tooling/generate_image_description/: __init__.py  cli.py  examples.json
