[project]
name = "ai-tooling"
version = "0.0.3"
description = "Tooling that uses AI tech"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Evin Dunn"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "openai (>=2.34.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
include = ["ai_tooling/generate_image_description/examples.json"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-image-description = "ai_tooling.generate_image_description.cli:main"

[dependency-groups]
dev = [
    "pyyaml (>=6.0.3,<7.0.0)"
]
